Fixed DM channels alignment and DM index container size

--- a/react-app/src/components/DirectMessages/DMChannels/DMChannels.css
+++ b/react-app/src/components/DirectMessages/DMChannels/DMChannels.css
@@ -17,3 +17,11 @@
 .mleft-15 {
 	margin: 15px;
 }
+
+.UserLanding-sidebar-channel-name.dmchannels {
+	margin-top: 8px;
+}
+
+.DMChannels-header {
+	padding: 8px;
+}
